--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h2>Weather Dashboard in Flask</h2>
-    <form>
-        Location post code:<input type="text" name="postcode"></br>
+    <form action="{{ url_for('render_results') }}" method="post">
+        Location post code: <input type="text" name="postcode"></br>
         <input type="submit" value="Submit">
     </form>
 </body>
