--- a/templates/results.html
+++ b/templates/results.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/results.css') }}">
 </head>
 <body>
-    <h3>Weather in {{ location }}</h3>
-    <h2>{{ temp }}°C</h2>
-    <h2>{{ weather }}</h2>
-    <h4>Feels like: {{  feels_like }}°C</h4>
+    <div id="weatherResults">
+        <h3>Weather in {{ location }}</h3>
+        <h2>{{ temp }}°C</h2>
+        <h2>{{ weather }}</h2>
+        <h4>Feels like: {{  feels_like }}°C</h4>
+    </div>
+
 </body>
 </html>
